fixed overflowing x axis, improved timestamps alignment

--- a/src/components/deaths/player_styles.scss
+++ b/src/components/deaths/player_styles.scss
@@ -3,7 +3,7 @@
  
 
 .main-container{
-    width: 100vw;
+    width: 99vw;
     display: flex;
     flex-direction: row;
     .player-timestamps-container {
