--- a/src/components/sidenav/sidenav.scss
+++ b/src/components/sidenav/sidenav.scss
@@ -1,6 +1,7 @@
 .sidebar-container {
-  display: inline;
-  overflow: hidden;
+
+  
+
   .nav-section {
     background-color: rgba(28, 29, 33, 1);
     color: #b9b9bb;
